2007-12-02  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/solver.hxx: removed using namespace from header.
	
	* source/inc/tool/global.hxx: disabled uno extension mode because it 
	didn't work with ooo-build (works only with upstream).
	
	* source/ui/resmgr.cxx: added 'using css::uno::Exception'.

2007-12-01  Kohei Yoshida  <kyoshida@novell.com>

	* ext/description.xml: no registration for default UNO package.
	
	* ext/META-INF/manifest.xml: place shared object at root directory for
	default UNO package.
	
	* source/inc/basedlg.hxx:
	* source/inc/solver.hxx:
	* source/inc/tool/global.hxx: define SCSOLVER_UNO_COMPONENT globally for
	builtin version.
	
	* util/makefile.mk: package scsolver.uno.oxt at the end of the build.
	
	* util/packExtension.py: python script that does the packaging.

2007-12-01  Kohei Yoshida  <kyoshida@novell.com>

	* ext: moved from workben/addon_pkg.

2007-11-30  Kohei Yoshida  <kyoshida@novell.com>

	* util/makefile.mk: package extension at the end of the build run.
	
	* util/packExtension.py: a little cleanup.

2007-11-30  Kohei Yoshida  <kyoshida@novell.com>

	* util/packExtension.py: added script to pack scsolver as an extension
	at the end of the build run.

2007-11-27  Kohei Yoshida  <kyoshida@novell.com>

	* workben/addon_pkg/translation/de/scsolver.properties: added German
	translation (from scsolver.src file).

	* workben/addon_pkg/translation/en-US/scsolver.properties:
	* workben/addon_pkg/translation/fr/scsolver.properties: fixed Iteration
	timed out text.

2007-11-26  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/numeric/polyeqnsolver.hxx: added #include <exception> to
	fix build breakage on PLD Linux.
	
	* workben/addon_pkg/Makefile.in: changed the extension from zip to oxt,
	and removed hard-coded '-mtune=pentium3'.

2007-11-25  Kohei Yoshida  <kyoshida@novell.com>

	* workben/addon_pkg/build.bat: added crude build script for win32.  
	Everything is hard-coded hence is not configurable (yet).
	