@@ -1,5 +1,10 @@
 2007-12-02  Kohei Yoshida  <kyoshida@novell.com>
 
+	* util/makefile.mk: disabled building an extension as ooinstall fails 
+	with a default extension install.
+
+2007-12-02  Kohei Yoshida  <kyoshida@novell.com>
+
 	* source/inc/solver.hxx: removed using namespace from header.
 	
 	* source/inc/tool/global.hxx: disabled uno extension mode because it 
